apps/saleor-api/overlays/prod/patches/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-api
  namespace: kyeol
spec:
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "1000m"
              memory: "2Gi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
