apps/saleor-api/overlays/prod/patches/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saleor-api
  namespace: kyeol
  annotations:
    # Explicitly set the correct ACM Certificate ARN to fix deployment error
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:827913617839:certificate/95195666-9195-4cba-9d0a-acd768c1a1b6
    # Use existing ALB group to maintain current ALB (0644cc6b4b)
    alb.ingress.kubernetes.io/group.name: "kyeol-ingress"
